--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Thomas Donofri
 description: Modder on donutteam.com
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: hhttp://donutteam.com/avatar/1577hipp/200/
+avatar: http://donutteam.com/avatar/1577hipp/200/
 
 #
 # Flags below are optional
