--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: hipporeno
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<https://www.youtube.com/channel/UClwzEimsrGmY25cqAarEklQ> or user/<hipporeno>
+  youtube: # https://www.youtube.com/channel/UClwzEimsrGmY25cqAarEklQ
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
