--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: hipporeno
+  twitter: https://twitter.com/Hipporeno
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # https://www.youtube.com/channel/UClwzEimsrGmY25cqAarEklQ
+  youtube: https://www.youtube.com/channel/UClwzEimsrGmY25cqAarEklQ
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
