--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: https://twitter.com/Hipporeno
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: https://www.youtube.com/user/HippoRenoPlaysMC
+  youtube: user/HippoRenoPlaysMC
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
