--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Thomas Donofri
 description: Modder on donutteam.com
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://donutteam.com/avatar/1577hipp/200/
+avatar: https://en.gravatar.com/userimage/109983204/30bba240a6ef30d5544a3613fcf39ca0.jpeg
 
 #
 # Flags below are optional
