--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Thomas Donofri
 
 # Short bio or description (displayed in the header)
-description: Modder on donutteam.com
+description: Developer of mods for The Simpsons Hit & Run
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://en.gravatar.com/userimage/109983204/30bba240a6ef30d5544a3613fcf39ca0.jpeg
